--- a/src/index.html
+++ b/src/index.html
@@ -195,6 +195,8 @@
             value="" 
             name="publisher" 
             type="text" 
+            placeholder="4 chars minimum"
+            required
           />
           <label>Prep time</label>
           <input 
