--- a/src/index.html
+++ b/src/index.html
@@ -134,7 +134,7 @@
         <ul class="results"></ul>
 
         <p class="copyright">
-          &copy; Study project of
+          &copy; Study project based on
           <a
             class="twitter-link"
             target="_blank"
